<resources>
    <string name="app_name">Medicine</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>

    <string name="action_settings_safe">Safe</string>
    <string name="action_settings_password">Password</string>

    <string name="action_settings_cn">设置</string>
    <string name="action_login_cn">登录</string>

    <string name="not_login">您还未登录</string>
    <string name="has_login">您好!</string>
    <string name="trial_class">试听课程</string>
    <string name="class_center">选课中心</string>

    <string name="classes">课程</string>
    <string name="faqs">咨询</string>
    <string name="finds">发现</string>
    <string name="personal">我的</string>

    <string name="my_classes">我的课堂</string>
    <string name="my_faqs">我的咨询</string>
    <string name="my_finds">我的发现</string>
    <string name="my_personal">我的信息</string>
    <string name="my_login">登录</string>

    <string name="career_classes">职业班</string>

    <string name="goin">》</string>

</resources>
