<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_login" android:title="@string/action_login_cn"
        android:orderInCategory="100" app:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" >

        <menu>

            <item android:id="@+id/action_settings_safe" android:title="@string/action_settings_safe"
                android:orderInCategory="100" app:showAsAction="ifRoom" />

            <item android:id="@+id/action_settings_password" android:title="@string/action_settings_password"
                android:orderInCategory="100" app:showAsAction="ifRoom" />


        </menu>

    </item>
</menu>
