<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@drawable/u21">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" android:layout_weight="1" android:orientation="vertical"
        android:gravity="center" android:id="@+id/classes_tab">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:src="@drawable/u23"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classes"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" android:layout_weight="1" android:orientation="vertical"
        android:gravity="center" android:id="@+id/faqs_tab">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:src="@drawable/u23"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faqs"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" android:layout_weight="1" android:orientation="vertical"
        android:gravity="center" android:id="@+id/finds_tab">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:src="@drawable/u23"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finds"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" android:layout_weight="1" android:orientation="vertical"
        android:gravity="center" android:id="@+id/personal_tab">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:src="@drawable/u23"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal"/>
    </LinearLayout>

</LinearLayout>

