<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:src="@drawable/u68" android:id="@+id/portrait"
        android:layout_centerHorizontal="true" android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_centerHorizontal="true"
        android:layout_below="@+id/portrait" android:layout_marginTop="5dp"
        android:text="@string/not_login"
        android:id="@+id/portrait_tip"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/trial_area"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/portrait_tip"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:background="@drawable/rectangle_rounded"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:src="@drawable/trail" android:layout_marginRight="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trial_class"
            android:layout_gravity="center_vertical"
            android:textSize="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/class_area"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/trial_area"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:background="@drawable/rectangle_rounded"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:src="@drawable/trail" android:layout_marginRight="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_center"
            android:layout_gravity="center_vertical" android:textSize="20dp"/>
    </LinearLayout>

    <include android:id="@+id/footer" layout="@layout/footer"/>

</RelativeLayout>
